Expands variable names 🏷️
…to make them more descriptive.